<resources>
    <string name="app_name">维修派工</string>
    <string name="username">用户名：</string>
    <string name="password">密   码：</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="save_password">记住密码</string>
    <string name="setting">设置</string>
    <string name="update">更新</string>
    <string name="system_setting">系统设置</string>
    <string name="back">返回</string>
    <string name="server_address">服务器地址</string>
    <string name="input_server_address">请输入服务器地址</string>
    <string name="log_up">日志上传</string>
    <string name="date_reset">数据重置</string>
    <string name="onekey_clean">一键加速</string>
    <string name="device">设备</string>
    <string name="start_scan">启动扫描枪</string>
    <string name="text">测试</string>
    <string name="finish">完成</string>
    <string name="warehouse">仓库</string>
    <string name="scan">扫描</string>
    <string name="menu">菜单大全</string>
    <string name="sync">同步</string>
    <string name="scanup">条码上传</string>
    <string name="install">安装</string>
    <string name="installList">安装列表</string>
    <string name="yinstallList">安装已完成列表</string>
    <string name="repair">维修</string>
    <string name="repairList">维修列表</string>
    <string name="yrepairList">维修已完成列表</string>
    <string name="yfinish">已完成</string>
    <string name="nfinish">未完成</string>
    <string name="nhander">待处理</string>
    <string name="updata">提交</string>
    <string name="cancel">取消</string>
    <string name="reason">请输入未完成原因</string>
    <string name="getpassword">获取动态密码</string>


</resources>
