<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F0F0">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#35bbb0"
        android:gravity="center"
        android:text="W"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/main_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_username"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/main_ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_password"
            android:textSize="15sp"
            android:inputType="textPassword" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/main_cb_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/main_bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/main_bt_toupdate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/main_bt_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rounded_rectangle"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="#ffffff"
        android:textSize="20dp" />
</LinearLayout>
