<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#35bbb0"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip">

        <Button
            android:id="@+id/menu_bt_install"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="#00BFFF"
            android:textColor="@color/white"
            android:text="@string/install"
            android:textSize="20sp"
            android:textStyle="bold" />
r
        <Button
            android:id="@+id/menu_bt_repair"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="#DC143C"
            android:text="@string/repair"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            android:id="@+id/menu_bt_scan"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:text="@string/scan"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/menu_bt_scanup"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scanup"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="#95ff00"
            android:layout_margin="5dip"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"

        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip">
        <Button
            android:id="@+id/menu_bt_sync"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="#FA8072"
            android:text="@string/sync"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menu_bt_back"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="#DAA520"
            android:layout_margin="1dip"/>

    </LinearLayout>


</LinearLayout>