<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="未完成输入框"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/nofinish_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reason"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/nofinish_bt_ok"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/updata"/>
        <Button
            android:id="@+id/nofinish_bt_no"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>